[gd_scene load_steps=10 format=3 uid="uid://cdchu1efn318g"]

[ext_resource type="PackedScene" uid="uid://q3iw0t4spey3" path="res://scenes/main_menu/title.tscn" id="1_annuc"]
[ext_resource type="Script" path="res://scripts/main_menu/weapon_select_screen.gd" id="1_ghnno"]
[ext_resource type="Theme" uid="uid://codxo4j8fmbmi" path="res://resources/uis/theme_button_blue.tres" id="2_3vei5"]
[ext_resource type="PackedScene" uid="uid://vxtxetmjy5xr" path="res://scenes/main_menu/buttons/weapon_selection_button.tscn" id="2_imgvk"]
[ext_resource type="PackedScene" uid="uid://03mavu5une1m" path="res://assets/meshes/weapons/machine_gun.glb" id="3_ikged"]
[ext_resource type="PackedScene" uid="uid://bbs0xvuylbt0k" path="res://assets/meshes/weapons/rocket_launcher.glb" id="4_kf5rh"]
[ext_resource type="PackedScene" uid="uid://ird17ltstxeb" path="res://assets/meshes/weapons/shotgun.glb" id="5_ityh8"]
[ext_resource type="PackedScene" uid="uid://nx148oecy51i" path="res://assets/meshes/weapons/sniper.glb" id="6_n42eo"]
[ext_resource type="PackedScene" uid="uid://deda5wq88ijed" path="res://assets/meshes/weapons/uzi.glb" id="7_pavkg"]

[node name="WeaponSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ghnno")

[node name="Title" parent="." instance=ExtResource("1_annuc")]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
text = "[center][wave amp=50 freq=2][i] Choose Your Weapon [/i][/wave][/center]"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="MachineGunButton" parent="CenterContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_imgvk")]
layout_mode = 2
text = "Machine gun"
weapon_mesh = ExtResource("3_ikged")

[node name="RocketLauncherButton" parent="CenterContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_imgvk")]
layout_mode = 2
text = "Rocket Launcher"
weapon_mesh = ExtResource("4_kf5rh")
weapon_type = 1

[node name="ShotgunButton" parent="CenterContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_imgvk")]
layout_mode = 2
text = "Shotgun"
weapon_mesh = ExtResource("5_ityh8")
weapon_type = 2

[node name="SniperButton" parent="CenterContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_imgvk")]
layout_mode = 2
text = "Sniper"
weapon_mesh = ExtResource("6_n42eo")
weapon_type = 3

[node name="UziButton" parent="CenterContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_imgvk")]
layout_mode = 2
text = "Uzi"
weapon_mesh = ExtResource("7_pavkg")
weapon_type = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="CenterContainer/HBoxContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="WeaponCamera" type="Camera3D" parent="CenterContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.15, 0, 0)
cull_mask = 2

[node name="WeaponDisplayer" type="Node3D" parent="CenterContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="CenterContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
layers = 2
light_cull_mask = 4293918722
directional_shadow_mode = 0
sky_mode = 1

[node name="BackButtonMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 48
theme_override_constants/margin_bottom = 48

[node name="BackButton" type="Button" parent="BackButtonMargin"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme = ExtResource("2_3vei5")
text = "Back"

[node name="StartButtonMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="StartButton" type="Button" parent="StartButtonMargin"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme = ExtResource("2_3vei5")
text = "Start"

[connection signal="pressed" from="BackButtonMargin/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="StartButtonMargin/StartButton" to="." method="_on_start_button_pressed"]
